--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,100 @@ Green: #00B172
 White: #FFF
 
 */
+
+* {
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+}
+
+body {
+  width: 100%;
+  margin: 0;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  background-image: url(/images/landing.jpg);
+  background-position: center;
+  background-size: 100%;
+  height: 900px;
+}
+
+nav {
+  position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 1.2em;
+}
+
+nav img {
+  height: 4em;
+  margin-left: 2em;
+}
+
+nav ul {
+  width: 30%;
+  font-size: 1.5em;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  margin-right: 2em;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+h1 {
+  font-size: 5em;
+  color: #fff;
+  letter-spacing: 1px;
+  word-spacing: 10px;
+}
+
+header p {
+  color: #fff;
+  font-size: 2em;
+  font-weight: lighter;
+  text-align: center;
+}
+
+section h2 {
+  margin-top: 2em;
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: underline #00b172;
+  text-underline-position: under;
+}
+
+section .features-overview {
+  display: flex;
+  justify-content: space-around;
+  padding: 3em;
+}
+
+.feature {
+  height: 30%;
+  width: 30%;
+  text-align: center;
+}
+
+.feature p {
+  font-size: 1.2em;
+}
+
+.feature img {
+  height: 5em;
+}
+
+h3 {
+  font-size: 2em;
+  color: #00b172;
+  font-weight: bold;
+}
